tests/semantic/counter2/counter2.err
Error: Auto-increment functor in a recursive rule in file counter2.dl at line 13
A(autoinc()) :- A(1).
--^-------------------
Error: Auto-increment functor in a recursive rule in file counter2.dl at line 14
A(autoinc()) :- A(1).
--^-------------------
Error: Auto-increment functor in a recursive rule in file counter2.dl at line 15
A(autoinc()) :- A(1).
--^-------------------
3 errors generated, evaluation aborted
